# face-reconstruction

./: .gitignore  LICENSE  README.md
data/: Landmarks68_model2017-1_face12_nomouth.anl
data/Face2/: realsense_face2_sf2_deep_input.mtl
data/Face3/: realsense_face3_sf2_deep_input.mtl
data/RGBD_data/: camera_info.yaml
glfw/lib-vc2012/: glfw3.lib  glfw3_mt.lib  glfw3dll.lib
glfw/lib-vc2013/: glfw3.lib  glfw3_mt.lib  glfw3dll.lib
glfw/lib-vc2015/: glfw3.lib  glfw3_mt.lib  glfw3dll.lib
glfw/lib-vc2017/: glfw3.lib
src/: BFM.h  CMakeLists.txt  CalcErrorTerm.h  DenseOptimizer.cpp  DenseOptimizer.h  FacialLandmarkDetection.h  FreeImageHelper.cpp  Optimizer.h  ProcrustesAligner.h  RGBD_Image.h  RegularizationTerm.h  Renderer.cpp  Renderer.h  SimpleMesh.h  files.cmake  main.cpp
src/utils/: io.h  points.h
